--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.56"
+async-trait = "0.1.53"
 clap = { version = "3.1.6", features = ["derive"] }
+egg-mode = "0.16.0"
 maplit = "1.0.2"
 reqwest = { version = "0.11" }
 serde = { version = "1.0.136", features = ["derive"] }
