--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+actix-files = { version = "0.6.0", optional = true }
+actix-rt = { version = "2.7.0", optional = true }
+actix-web = { version = "4.0.1", optional = true }
 anyhow = "1.0.56"
 async-trait = "0.1.53"
 chrono = "0.4.19"
@@ -11,10 +14,16 @@ clap = { version = "3.1.6", features = ["derive"] }
 egg-mode = "0.16.0"
 futures = "0.3.21"
 maplit = "1.0.2"
+open = { version = "2.1.1", optional = true }
 reqwest = { version = "0.11" }
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 tempfile = "3.3.0"
 thiserror = "1.0.30"
 tokio = { version = "1.17.0", features = ["full"] }
+tokio-stream = { version = "0.1.8", features = ["fs"] }
 url = { version = "2.2.2", features = ["serde"] }
+
+[features]
+default = ["serve"]
+serve = ["actix-files", "actix-rt", "actix-web", "open"]
