--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,9 @@ async-trait = "0.1.53"
 chrono = "0.4.19"
 clap = { version = "3.1.6", features = ["derive"] }
 egg-mode = "0.16.0"
+env_logger = "0.9.0"
 futures = "0.3.21"
+log = "0.4.16"
 maplit = "1.0.2"
 mime = { version = "0.3.16", optional = true }
 open = { version = "2.1.1", optional = true }
