--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 actix-files = { version = "0.6.0", optional = true }
 actix-rt = { version = "2.7.0", optional = true }
-actix-web = { version = "4.0.1", optional = true }
+actix-web = { version = "4.0.1", optional = true, features = ["rustls"] }
 anyhow = "1.0.56"
 async-trait = "0.1.53"
 chrono = "0.4.19"
@@ -20,6 +20,7 @@ mime = { version = "0.3.16", optional = true }
 open = { version = "2.1.1", optional = true }
 reqwest = { version = "0.11" }
 rust-embed = { version = "6.3.0", optional = true }
+rustls = { version = "0.20.4", optional = true }
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 tempfile = "3.3.0"
@@ -30,4 +31,4 @@ url = { version = "2.2.2", features = ["serde"] }
 
 [features]
 default = ["serve"]
-serve = ["actix-files", "actix-rt", "actix-web", "open", "rust-embed", "mime"]
+serve = ["actix-files", "actix-rt", "actix-web", "open", "rust-embed", "mime", "rustls"]
