--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,8 +7,11 @@ env:
 
 jobs:
 
-  build:
-    runs-on: ubuntu-latest
+  test:
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ windows-latest, ubuntu-latest ]
     steps:
       - uses: actions/checkout@v2
 
@@ -23,3 +26,16 @@ jobs:
 
       - name: Cargo Sort Check
         run: cargo install cargo-sort --debug && cargo-sort --check --workspace
+
+  release:
+    if: startsWith(github.ref, 'refs/tags/')
+    runs-on: windows-latest
+    needs: test
+    steps:
+      - name: Compile Release
+        run: cargo build --release
+
+      - name: Github Release
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ./target/release/twitter-dl.exe
