--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,43 +6,53 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-
-  test:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ windows-latest, ubuntu-latest ]
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Cargo Test
-        run: cargo test --workspace -- --nocapture
-
-      - name: Cargo Clippy Check
-        run: cargo clippy --all-features --workspace -- -D warnings
-
-  check-style:
+  lints:
+    name: Lints
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          components: clippy
+      - uses: Swatinem/rust-cache@v1
+      - name: Clippy
+        run: cargo clippy --all-features --workspace -- -D warnings
 
-      - name: Cargo Format Check
-        run: cargo fmt -- --check
 
-      - name: Cargo Sort Check
-        run: cargo install cargo-sort --debug && cargo-sort --check --workspace
+  build:
+    name: Build for ${{ matrix.target }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        include:
+          - os: ubuntu-latest
+            exe: twitter-dl
+            target: x86_64-unknown-linux-gnu
+          - os: windows-latest
+            exe: twitter-dl.exe
+            target: x86_64-pc-windows-msvc
+          - os: macos-latest
+            exe: twitter-dl
+            target: x86_64-apple-darwin
+          - os: macos-latest
+            exe: twitter-dl
+            target: aarch64-apple-darwin
 
-  release:
-    if: startsWith(github.ref, 'refs/tags/')
-    runs-on: windows-latest
-    needs: [test, check-style]
     steps:
       - uses: actions/checkout@v2
-
-      - name: Compile Release
-        run: cargo build --release
-
-      - name: Github Release
-        uses: softprops/action-gh-release@v1
+      - uses: actions-rs/toolchain@v1
         with:
-          files: ./target/release/twitter-dl.exe
+          profile: minimal
+          toolchain: stable
+      - uses: Swatinem/rust-cache@v1
+      - name: Build
+        run: cargo build
+      - name: Run tests
+        run: cargo test --verbose
+      - uses: actions/upload-artifact@v2
+        with:
+          name: twitter-dl-${{ matrix.target }}
+          path: target/debug/${{ matrix.exe }}
+
